frontend/test/should_pass/storages.gm
node class NN
{
	id:int;
}

edge class EE
{
	id:int;
}
