frontend/test/should_fail/object_model_001.gm
node class A {
    obj:object;
}
edge class e {
    obj:object;
    val:int;
}
